RESOLVED FIXED77577
contentDispositionType misparses the Content-Disposition header in some obscure corner cases
https://bugs.webkit.org/show_bug.cgi?id=77577
Summary contentDispositionType misparses the Content-Disposition header in some obscu...
Adam Barth
Reported 2012-02-01 14:55:15 PST
contentDispositionType misparses the Content-Disposition header in some obscure corner cases
Attachments
Patch (5.19 KB, patch)
2012-02-01 15:01 PST, Adam Barth
no flags
Patch (5.42 KB, patch)
2012-02-01 15:15 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-02-01 15:01:27 PST
Eric Seidel (no email)
Comment 2 2012-02-01 15:10:01 PST
Comment on attachment 125024 [details] Patch I would like two additional pieces of information in your Changelog. 1. What happens w/o this patch. 2. How (if at all) this should affect Safari on Mac/Win.
Adam Barth
Comment 3 2012-02-01 15:15:40 PST
Eric Seidel (no email)
Comment 4 2012-02-01 15:17:29 PST
Comment on attachment 125029 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=125029&action=review > Source/WebCore/ChangeLog:24 > + Without this patch, these test cases neither trigger a navigation nor a > + download in Chromium. This patch does not appear to cause any visible > + change in Safari. (Safari passes these tests both before and after > + this patch.) You mentioned in person that *if* we saw a change it would be to cause more navigations to be treated as inline rather than downloads. Is that a correct restatement of our conversation?
Adam Barth
Comment 5 2012-02-01 15:19:07 PST
> You mentioned in person that *if* we saw a change it would be to cause more navigations to be treated as inline rather than downloads. Is that a correct restatement of our conversation? Yes, but testing what actually happens in these cases shows that there isn't any difference in behavior. These cases appear to already treated as inline, even without this patch.
Eric Seidel (no email)
Comment 6 2012-02-01 15:20:06 PST
Comment on attachment 125029 [details] Patch OK. Thank you.
Adam Barth
Comment 7 2012-02-01 15:23:33 PST
Comment on attachment 125029 [details] Patch Let's give AP a chance to comment. (He's in a metting ATM.)
Adam Barth
Comment 8 2012-02-01 15:37:48 PST
Looks like this function isn't used by anyone except Chromium and Qt.
WebKit Review Bot
Comment 9 2012-02-01 16:15:12 PST
Comment on attachment 125029 [details] Patch Clearing flags on attachment: 125029 Committed r106514: <http://trac.webkit.org/changeset/106514>
WebKit Review Bot
Comment 10 2012-02-01 16:15:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.